--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@lzwme/simple-mock",
-  "version": "1.3.6",
+  "version": "1.4.0",
   "description": "Simple mock used in node server",
   "main": "dist/index.js",
   "typings": "index.d.ts",
@@ -12,7 +12,13 @@
   "bugs": {
     "url": "https://github.com/lzwme/simple-mock/issues"
   },
-  "keywords": ["apimock", "mock", "node", "express", "http-proxy"],
+  "keywords": [
+    "apimock",
+    "mock",
+    "node",
+    "express",
+    "http-proxy"
+  ],
   "author": {
     "name": "lzwme",
     "url": "https://lzw.me",
@@ -28,7 +34,6 @@
     "start:dev": "npm run bootstrap && npm run watch",
     "serve": "node --max_old_space_size=8192 -r ts-node/register/transpile-only server/www.ts -o",
     "serve:ws": "node --max_old_space_size=8192 --title=WS-PROXY-SERVER -r ts-node/register/transpile-only ws-proxy-server/index.ts -o",
-    "describe": "npm-scripts-info",
     "build": "run-s clean && run-p build:*",
     "build:main": "tsc -p tsconfig.json",
     "build:module": "tsc -p tsconfig.module.json",
@@ -45,7 +50,8 @@
     "cov:summary": "nyc report --reporter=text-summary",
     "cov:check": "nyc report && nyc check-coverage --lines 100 --functions 100 --branches 100",
     "clean": "trash build test dist dist-module",
-    "prepare-release": "run-s reset test cov:check doc:html version doc:publish"
+    "version": "standard-version",
+    "prepare-release": "run-s test cov:check version"
   },
   "dependencies": {
     "chalk": "*",
@@ -71,6 +77,7 @@
     "npm-run-all": "^4.1.5",
     "nyc": "^15.1.0",
     "prettier": "^2.2.1",
+    "standard-version": "^9.1.0",
     "trash-cli": "^4.0.0",
     "tslint": "^6.1.2",
     "tslint-config-prettier": "^1.18.0",
@@ -79,8 +86,12 @@
   },
   "ava": {
     "failFast": true,
-    "files": ["dist/*.spec.js"],
-    "ignoredByWatcher": ["dist/*.js"]
+    "files": [
+      "dist/*.spec.js"
+    ],
+    "ignoredByWatcher": [
+      "dist/*.js"
+    ]
   },
   "config": {
     "commitizen": {
@@ -92,11 +103,20 @@
   },
   "nyc": {
     "extends": "@istanbuljs/nyc-config-typescript",
-    "exclude": ["**/*.spec.js"]
+    "exclude": [
+      "**/*.spec.js"
+    ]
   },
   "lint-staged": {
-    "*.ts": ["prettier --parser typescript --write", "tslint -c tslint.json --fix", "git add"],
-    "*.json": ["prettier --parser json --write", "git add"]
+    "*.ts": [
+      "prettier --parser typescript --write",
+      "tslint -c tslint.json --fix",
+      "git add"
+    ],
+    "*.json": [
+      "prettier --parser json --write",
+      "git add"
+    ]
   },
   "husky": {
     "hooks": {
