--- a/package.json
+++ b/package.json
@@ -12,13 +12,7 @@
   "bugs": {
     "url": "https://github.com/lzwme/simple-mock/issues"
   },
-  "keywords": [
-    "apimock",
-    "mock",
-    "node",
-    "express",
-    "http-proxy"
-  ],
+  "keywords": ["apimock", "mock", "node", "express", "http-proxy"],
   "author": {
     "name": "lzwme",
     "url": "https://lzw.me",
@@ -52,15 +46,16 @@
     "cov:check": "nyc report && nyc check-coverage --lines 100 --functions 100 --branches 100",
     "clean": "trash build test dist dist-module",
     "version": "standard-version",
-    "prepare-release": "run-s test cov:check version"
+    "prepare-release": "run-s test cov:check version",
+    "prepare": "husky install"
   },
   "dependencies": {
     "chalk": "*",
     "concat-stream": "^2.0.0"
   },
   "devDependencies": {
-    "@commitlint/cli": "^11.0.0",
-    "@commitlint/config-angular": "^11.0.0",
+    "@commitlint/cli": "^12.1.1",
+    "@commitlint/config-angular": "^12.1.1",
     "@istanbuljs/nyc-config-typescript": "^1.0.1",
     "@types/node": "^14.14.22",
     "@types/ws": "^7.4.0",
@@ -72,7 +67,7 @@
     "ejs": "^3.1.5",
     "express": "^4.17.1",
     "http-proxy": "^1.18.1",
-    "husky": "^4.3.8",
+    "husky": "^6.0.0",
     "lint-staged": "^10.5.3",
     "npm-run-all": "^4.1.5",
     "nyc": "^15.1.0",
@@ -87,12 +82,8 @@
   },
   "ava": {
     "failFast": true,
-    "files": [
-      "dist/*.spec.js"
-    ],
-    "ignoredByWatcher": [
-      "dist/*.js"
-    ]
+    "files": ["dist/*.spec.js"],
+    "ignoredByWatcher": ["dist/*.js"]
   },
   "config": {
     "commitizen": {
@@ -104,25 +95,6 @@
   },
   "nyc": {
     "extends": "@istanbuljs/nyc-config-typescript",
-    "exclude": [
-      "**/*.spec.js"
-    ]
-  },
-  "lint-staged": {
-    "*.ts": [
-      "prettier --parser typescript --write",
-      "tslint -c tslint.json --fix",
-      "git add"
-    ],
-    "*.json": [
-      "prettier --parser json --write",
-      "git add"
-    ]
-  },
-  "husky": {
-    "hooks": {
-      "commit-msg": "commitlint -E HUSKY_GIT_PARAMS",
-      "pre-commit": "lint-staged"
-    }
+    "exclude": ["**/*.spec.js"]
   }
 }
