feat: 移除 chalk 依赖，改用自定义的 color 实现

--- a/package.json
+++ b/package.json
@@ -50,7 +50,7 @@
     "prepare": "husky install"
   },
   "dependencies": {
-    "chalk": "*",
+    "console-log-colors": "^0.2.2",
     "concat-stream": "^2.0.0"
   },
   "devDependencies": {
