--- a/package.json
+++ b/package.json
@@ -34,51 +34,55 @@
     "build:module": "tsc -p tsconfig.module.json",
     "fix": "run-s fix:*",
     "fix:prettier": "prettier \"src/**/*.ts\" --write",
-    "fix:tslint": "tslint --fix --project .",
+    "fix:lint": "eslint src --ext .ts --fix",
     "test": "run-s build test:*",
-    "test:lint": "tslint --project . && prettier \"src/**/*[^.spec].ts\" --list-different",
     "test:unit": "nyc --silent ava",
     "watch": "run-s clean build:main && run-p \"build:main -- -w\" \"test:unit -- --watch\"",
-    "cov": "run-s build test:unit cov:html && open-cli coverage/index.html",
+    "cov": "run-s build test:unit cov:html",
     "cov:html": "nyc report --reporter=html",
     "cov:send": "nyc report --reporter=lcov && codecov",
     "cov:summary": "nyc report --reporter=text-summary",
-    "cov:check": "nyc report && nyc check-coverage --lines 100 --functions 100 --branches 100",
+    "cov:check": "nyc report && nyc check-coverage --lines 10 --functions 10 --branches 10",
     "clean": "trash build test dist dist-module",
     "version": "standard-version",
     "prepare-release": "run-s test cov:check version",
     "prepare": "husky install"
   },
   "dependencies": {
-    "console-log-colors": "^0.2.2",
-    "concat-stream": "^2.0.0"
+    "concat-stream": "^2.0.0",
+    "console-log-colors": "^0.2.2"
   },
   "devDependencies": {
-    "@commitlint/cli": "^12.1.1",
-    "@commitlint/config-angular": "^12.1.1",
+    "@commitlint/cli": "^15.0.0",
+    "@commitlint/config-angular": "^15.0.0",
     "@istanbuljs/nyc-config-typescript": "^1.0.1",
-    "@types/node": "^14.14.22",
-    "@types/ws": "^7.4.0",
+    "@types/eslint": "^8.2.0",
+    "@types/node": "^14",
+    "@types/ws": "^8.2.0",
+    "@typescript-eslint/eslint-plugin": "^5.4.0",
+    "@typescript-eslint/parser": "^5.4.0",
     "ava": "^3.15.0",
     "body-parser": "^1.19.0",
-    "codecov": "^3.8.1",
+    "codecov": "^3.8.3",
     "compression": "^1.7.4",
-    "cookie-parser": "^1.4.5",
-    "ejs": "^3.1.5",
+    "cookie-parser": "^1.4.6",
+    "ejs": "^3.1.6",
+    "eslint": "^8.3.0",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-ava": "^13.1.0",
+    "eslint-plugin-prettier": "^4.0.0",
     "express": "^4.17.1",
     "http-proxy": "^1.18.1",
-    "husky": "^6.0.0",
-    "lint-staged": "^10.5.3",
+    "husky": "^7.0.4",
+    "lint-staged": "^12.1.2",
     "npm-run-all": "^4.1.5",
     "nyc": "^15.1.0",
-    "prettier": "^2.2.1",
-    "standard-version": "^9.1.0",
-    "trash-cli": "^4.0.0",
+    "prettier": "^2.5.0",
+    "standard-version": "^9.3.2",
+    "trash-cli": "^5.0.0",
     "ts-node": "*",
-    "tslint": "^6.1.2",
-    "tslint-config-prettier": "^1.18.0",
-    "typescript": "^4.1.3",
-    "ws": "^7.4.2"
+    "typescript": "^4.5.2",
+    "ws": "^8.3.0"
   },
   "ava": {
     "failFast": true,
