--- a/package.json
+++ b/package.json
@@ -50,43 +50,42 @@
   },
   "dependencies": {
     "concat-stream": "^2.0.0",
-    "console-log-colors": "^0.2.2"
+    "console-log-colors": "^0.2.3"
   },
   "devDependencies": {
-    "@commitlint/cli": "^15.0.0",
-    "@commitlint/config-angular": "^15.0.0",
-    "@istanbuljs/nyc-config-typescript": "^1.0.1",
-    "@types/eslint": "^8.2.0",
-    "@types/node": "^14",
-    "@types/ws": "^8.2.0",
-    "@typescript-eslint/eslint-plugin": "^5.4.0",
-    "@typescript-eslint/parser": "^5.4.0",
-    "ava": "^3.15.0",
-    "body-parser": "^1.19.0",
+    "@istanbuljs/nyc-config-typescript": "^1.0.2",
+    "@lzwme/fed-lint-helper": "^1.5.0",
+    "@types/eslint": "^8.4.1",
+    "@types/node": "^17",
+    "@types/ws": "^8.5.2",
+    "@typescript-eslint/eslint-plugin": "^5.14.0",
+    "@typescript-eslint/parser": "^5.14.0",
+    "ava": "^4.1.0",
+    "body-parser": "^1.19.2",
     "codecov": "^3.8.3",
     "compression": "^1.7.4",
     "cookie-parser": "^1.4.6",
     "ejs": "^3.1.6",
-    "eslint": "^8.3.0",
-    "eslint-config-prettier": "^8.3.0",
-    "eslint-plugin-ava": "^13.1.0",
+    "eslint": "^8.10.0",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-plugin-ava": "^13.2.0",
     "eslint-plugin-prettier": "^4.0.0",
-    "express": "^4.17.1",
+    "express": "^4.17.3",
     "http-proxy": "^1.18.1",
     "husky": "^7.0.4",
-    "lint-staged": "^12.1.2",
+    "lint-staged": "^12.3.5",
     "npm-run-all": "^4.1.5",
     "nyc": "^15.1.0",
-    "prettier": "^2.5.0",
+    "prettier": "^2.5.1",
     "standard-version": "^9.3.2",
     "trash-cli": "^5.0.0",
     "ts-node": "*",
-    "typescript": "^4.5.2",
-    "ws": "^8.3.0"
+    "typescript": "^4.6.2",
+    "ws": "^8.5.0"
   },
   "ava": {
     "failFast": true,
-    "files": ["dist/*.spec.js"],
+    "files": ["dist/**/*.spec.js"],
     "ignoredByWatcher": ["dist/*.js"]
   },
   "config": {
