--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Simple mock used in node server",
   "main": "dist/index.js",
   "typings": "index.d.ts",
-  "module": "dist-module/index.js",
+  "module": "esm/index.js",
   "repository": {
     "type": "git",
     "url": "https://github.com/lzwme/simple-mock.git"
@@ -23,7 +23,7 @@
     "node": ">=10"
   },
   "scripts": {
-    "bootstrap": "yarn || npm install",
+    "bootstrap": "pnpm install",
     "start": "npm run bootstrap && npm run build && npm run serve",
     "dev": "run-s bootstrap watch serve",
     "serve": "run-s serve:*",
@@ -40,10 +40,9 @@
     "watch": "run-s clean build:main && run-p \"build:main -- -w\" \"test:unit -- --watch\"",
     "cov": "run-s build test:unit cov:html",
     "cov:html": "nyc report --reporter=html",
-    "cov:send": "nyc report --reporter=lcov && codecov",
     "cov:summary": "nyc report --reporter=text-summary",
     "cov:check": "nyc report && nyc check-coverage --lines 10 --functions 10 --branches 10",
-    "clean": "trash build test dist dist-module",
+    "clean": "flh rm -f dist esm",
     "version": "standard-version",
     "prepare-release": "run-s test cov:check version",
     "prepare": "husky install"
@@ -54,44 +53,40 @@
   },
   "devDependencies": {
     "@istanbuljs/nyc-config-typescript": "^1.0.2",
-    "@lzwme/fed-lint-helper": "^1.5.0",
-    "@types/eslint": "^8.4.1",
-    "@types/node": "^17",
-    "@types/ws": "^8.5.2",
-    "@typescript-eslint/eslint-plugin": "^5.14.0",
-    "@typescript-eslint/parser": "^5.14.0",
-    "ava": "^4.1.0",
-    "body-parser": "^1.19.2",
-    "codecov": "^3.8.3",
+    "@lzwme/fed-lint-helper": "^1.12.3",
+    "@types/eslint": "^8.4.6",
+    "@types/node": "^18",
+    "@types/ws": "^8.5.3",
+    "@typescript-eslint/eslint-plugin": "^5.33.1",
+    "@typescript-eslint/parser": "^5.33.1",
+    "ava": "^4.3.1",
+    "body-parser": "^1.20.0",
     "compression": "^1.7.4",
     "cookie-parser": "^1.4.6",
-    "ejs": "^3.1.6",
-    "eslint": "^8.10.0",
+    "ejs": "^3.1.8",
+    "eslint": "^8.22.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-ava": "^13.2.0",
-    "eslint-plugin-prettier": "^4.0.0",
-    "express": "^4.17.3",
+    "eslint-plugin-prettier": "^4.2.1",
+    "express": "^4.18.1",
     "http-proxy": "^1.18.1",
-    "husky": "^7.0.4",
-    "lint-staged": "^12.3.5",
+    "husky": "^8.0.1",
     "npm-run-all": "^4.1.5",
     "nyc": "^15.1.0",
-    "prettier": "^2.5.1",
-    "standard-version": "^9.3.2",
-    "trash-cli": "^5.0.0",
+    "prettier": "^2.7.1",
+    "standard-version": "^9.5.0",
     "ts-node": "*",
-    "typescript": "^4.6.2",
-    "ws": "^8.5.0"
+    "typescript": "^4.7.4",
+    "ws": "^8.8.1"
   },
   "ava": {
     "failFast": true,
     "files": ["dist/**/*.spec.js"],
     "ignoredByWatcher": ["dist/*.js"]
   },
-  "config": {
-    "commitizen": {
-      "path": "cz-conventional-changelog"
-    }
+  "publishConfig": {
+    "access": "public",
+    "registry": "https://registry.npmjs.com"
   },
   "prettier": {
     "singleQuote": true
@@ -99,5 +94,6 @@
   "nyc": {
     "extends": "@istanbuljs/nyc-config-typescript",
     "exclude": ["**/*.spec.js"]
-  }
+  },
+  "packageManager": "pnpm@7.6.0"
 }
