--- a/package.json
+++ b/package.json
@@ -12,7 +12,13 @@
   "bugs": {
     "url": "https://github.com/lzwme/simple-mock/issues"
   },
-  "keywords": ["apimock", "mock", "node", "express", "http-proxy"],
+  "keywords": [
+    "apimock",
+    "mock",
+    "node",
+    "express",
+    "http-proxy"
+  ],
   "author": {
     "name": "lzwme",
     "url": "https://lzw.me",
@@ -49,40 +55,44 @@
   },
   "dependencies": {
     "concat-stream": "^2.0.0",
-    "console-log-colors": "^0.2.3"
+    "console-log-colors": "^0.4.0"
   },
   "devDependencies": {
     "@istanbuljs/nyc-config-typescript": "^1.0.2",
-    "@lzwme/fed-lint-helper": "^1.12.3",
-    "@types/eslint": "^8.4.6",
-    "@types/node": "^18",
-    "@types/ws": "^8.5.3",
-    "@typescript-eslint/eslint-plugin": "^5.33.1",
-    "@typescript-eslint/parser": "^5.33.1",
-    "ava": "^4.3.1",
-    "body-parser": "^1.20.0",
+    "@lzwme/fed-lint-helper": "^2.3.4",
+    "@types/eslint": "^8.44.0",
+    "@types/node": "^20",
+    "@types/ws": "^8.5.5",
+    "@typescript-eslint/eslint-plugin": "^6.1.0",
+    "@typescript-eslint/parser": "^6.1.0",
+    "ava": "^5.3.1",
+    "body-parser": "^1.20.2",
     "compression": "^1.7.4",
     "cookie-parser": "^1.4.6",
-    "ejs": "^3.1.8",
-    "eslint": "^8.22.0",
-    "eslint-config-prettier": "^8.5.0",
-    "eslint-plugin-ava": "^13.2.0",
-    "eslint-plugin-prettier": "^4.2.1",
-    "express": "^4.18.1",
+    "ejs": "^3.1.9",
+    "eslint": "^8.45.0",
+    "eslint-config-prettier": "^8.8.0",
+    "eslint-plugin-ava": "^14.0.0",
+    "eslint-plugin-prettier": "^5.0.0",
+    "express": "^4.18.2",
     "http-proxy": "^1.18.1",
-    "husky": "^8.0.1",
+    "husky": "^8.0.3",
     "npm-run-all": "^4.1.5",
     "nyc": "^15.1.0",
-    "prettier": "^2.7.1",
+    "prettier": "^3.0.0",
     "standard-version": "^9.5.0",
     "ts-node": "*",
-    "typescript": "^4.7.4",
-    "ws": "^8.8.1"
+    "typescript": "^5.1.6",
+    "ws": "^8.13.0"
   },
   "ava": {
     "failFast": true,
-    "files": ["dist/**/*.spec.js"],
-    "ignoredByWatcher": ["dist/*.js"]
+    "files": [
+      "dist/**/*.spec.js"
+    ],
+    "ignoredByWatcher": [
+      "dist/*.js"
+    ]
   },
   "publishConfig": {
     "access": "public",
@@ -93,7 +103,9 @@
   },
   "nyc": {
     "extends": "@istanbuljs/nyc-config-typescript",
-    "exclude": ["**/*.spec.js"]
+    "exclude": [
+      "**/*.spec.js"
+    ]
   },
-  "packageManager": "pnpm@7.6.0"
+  "packageManager": "pnpm@8.6.0"
 }
